# pydev-toy

./: .envrc  .gitignore  README.md  install.sh  pyproject.toml  tasks.py
archive/: pydev.py
extras/: package-version.ipynb  pydev-utils.ipynb  pyenv-versions.ipynb  pyproject.ipynb  search-path.ipynb  sort-versions.ipynb
scripts/: install-pydev.sh  install-with-pipx.sh  install-with-pipx.zsh  install.sh  update-readme.py
src/: pydev.py
src/pydev/: __init__.py  __main__.py  messages.py  program.py  utils.py
tests/: test_pydev.py
