[project]
name = "pydev-toy"
version = "0.0.7"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
description = "Command line util to manage python projects"
urls.homepage = "https://github.com/furechan/pydev-toy"
dependencies = [ "click", "tomli", "build", "twine" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [ "pytest", "ipykernel", "invoke" ]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
targets.wheel.sources = ["src"]
dev-mode-dirs = ["src"]
only-include = ["src"]
exclude = [".*"]

[project.scripts]
pydev = "pydev:main"

[tool.pydev]
allow-publish = true
