[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.0,<0.9.0"]
# See https://docs.astral.sh/uv/concepts/build-backend/

[tool.uv.build-backend]
module-name = "pydev"

[project]
name = "pydev-toy"
version = "0.0.15"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["pyproject", "cli"]
description = "Command line util to manage python projects"
urls.homepage = "https://github.com/furechan/pydev-toy"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "tomlkit",
    "packaging",
    "build",
    "twine",
]

[project.scripts]
pydev = "pydev:main"

[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
    "invoke",
    "jmespath",
]


[tool.pydev]
allow-publish = true
